# ft_lex

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.zig  build.zig.zon
ft_lex_lib/: Cargo.toml
ft_lex_lib/src/: error.rs  lib.rs
ft_lex_lib/src/tokenizer/: cursor.rs  mod.rs
ft_lex_lib/test_config/result_snaps/tokenizer/: code_blocks_01_def_tricky_string_l_.snap  code_blocks_03_codeblock_start_with_ident_l_.snap  complete_02_simple_wc_l_.snap  complete_03_pascal_like_syntax_lex_doc_l_.snap  complete_04_float_flex_doc_l_.snap  complete_05_c_comments_flex_doc_l_.snap  complete_06_c_comments_2_flex_doc_l_.snap  complete_07_????_flex_doc_l_.snap  complete_09_c_keywords_and_comments_l_.snap  complete_10_start_conditions_l_.snap  complete_11_minimal_or_empty_empty_sections_l_.snap  complete_13_minimal_or_empty_only_rules_l_.snap  complete_14_js_interpreter_l_.snap  errors_01_unterminated_def_code_l_.snap  errors_03_codeblock_end_with_symbols_after_l_.snap  regex_01_tricky_regexes_l_.snap  regex_04_tricky_combined_l_.snap
ft_lex_lib/test_config/tokenizer/basic/: 06_err_whitespace_and_chars_after_separator.l.example
ft_lex_lib/test_config/tokenizer/code_blocks/: 03_codeblock_start_with_ident.l
ft_lex_lib/test_config/tokenizer/code_section/: 01_ok_basic.l.example  03_ok_empty_with_separator.l.example
ft_lex_lib/test_config/tokenizer/complete/: 02_simple_wc.l  03_ok_pascal_like_syntax_lex_doc.l.example  04_float_flex_doc.l  07_????_flex_doc.l  09_ok_c_keywords_and_comments.l  12_minimal_or_empty_only_definitions.l  13_minimal_or_empty_only_rules.l
(+415 files in other folders)
