[package]
name = "ft_lex_lib"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }

regex = "1.11.1"
lazy_static = "1.5.0"

#rstest = "0.25.0"
rstest = {git = "https://github.com/Obito-git/rstest.git", branch = "306_ignore_folders"}
